--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Marcio Pessoa <marcio.pessoa@gmail.com>
 maintainer=Marcio Pessoa <marcio.pessoa@gmail.com>
 sentence=A library just for real time execution
 paragraph=Supported by all Arduinos.
-category=Time
+category=Timing
 url=https://github.com/marcio-pessoa/Timer
 architectures=avr
